[package]
name = "dimo-rust-sdk"
description = "Community-driven DIMO SDK in Rust"
version = "0.1.1"
edition = "2021"
license-file = "LICENSE"
homepage = "https://docs.dimo.org/developer-platform"
repository = "https://github.com/iMac7/dimo-rust-sdk"
readme = "README.md"
keywords = ["dimo"]

[dependencies]
hex = "0.4"
serde_json = "1.0"
sha3 = "0.10"
reqwest = { version = "0.12", features = ["json"] }
secp256k1 = {version="0.29", features=["recovery"] }
serde = { version = "1.0", features = ["derive"] }